--- a/index.html
+++ b/index.html
@@ -37,19 +37,39 @@
     <div id="portfolio">
       <div class="slider-container">
         <div class="slide">
+          <div class="image-container">
           <img
             src="https://lh3.googleusercontent.com/pw/ACtC-3cXixh8cfQDKrEJl4TqYD2Ijtzofy50AxJCr7iR3zpawbXtCFSb7pGJCdNsE0RRtxgsdoK-ymi18eI5ODXR3IOqcaoMoWKKxahKlsRfe9TAN2Nt6N_JD6t__N7FsOKPshBcyxfR2tNC-2_H5Xq_QeBpvw=w1560-h929-no?authuser=0"
           />
+
+          <p>Our work embraces material experimentation, research, and collaboration across all scales and mediums, with a focus towards innovative architectural projects, environments, and designed objects for cultural and commercial clients.</p>
+          </div>
+          <!-- <div>
+          </div> -->
         </div>
         <div class="slide">
+
+          <div class="image-container">
           <img
             src="https://lh3.googleusercontent.com/pw/ACtC-3eayS-NfeEWhiQgXGKtCxzzwHt3UgffDdc6fRexH9brTiw1bFXAjjziKpO1IXU5cBwvtTUlFAcZDmtEQeL5hqttZcyU2VftiYlFlIdFd23B7IUVi95gqEzoApUNOjKGrv7i9BCvMekeWiCySUA9BNyjig=w1320-h979-no?authuser=0"
           />
+            <p>
+              We approach each project with curiosity and creative inquiry, seeking ways to engage artists, writers, and makers within our community into the design process
+            </p>
+          </div>
+
+
         </div>
         <div class="slide">
+
+          <div class="image-container">
           <img
             src="https://lh3.googleusercontent.com/pw/ACtC-3fBk1O3JzIeEa-rGZ7nDTH9A0fjEmUM9nMkkIIGpQvXR2xJ6bBuyhvxrIX1oZdELrwjbmY1zkIaNyAQ_FxJsC5Tg0Q9S3LTidjq7JkOSHbH5CGozAnKJixtEMTOT82abXeqK7Im8VfjXO2f42dUQBGmSw=w718-h979-no?authuser=0"
           />
+            <p>
+Our work is made thoughtfully and hands-on. We work closely with our fabricators and collaborators at all stages of each project, ensuring visual and material cohesion throughout.
+            </p>
+          </div>
         </div>
         <div class="slide">
           <img
