--- a/index.html
+++ b/index.html
@@ -72,15 +72,20 @@ Our work is made thoughtfully and hands-on. We work closely with our fabricators
           </div>
         </div>
         <div class="slide">
+          <div class="image-container">
+
           <img
             src="https://lh3.googleusercontent.com/pw/ACtC-3f0GPsI83b1C4PtLZkZL7nyL0L8i7YfoTAAR-5HPgyWHwe8P4--fa7bpPfK0IbJ7-fguR9nvFdFRM1f3Yj1QxWkyjzE1JY8B1Zs75WA65u55QpfTp8050mOEaGwTiFnHFQdl9C77rW0IJIXGtwFNwoe3Q=w1560-h878-no?authuser=0"
           />
+          </div>
         </div>
         <div class="slide">
+          <div class="image-container">
           <img
             src="https://lh3.googleusercontent.com/pw/ACtC-3f7G2vV77t8yi03uKKgstftngql_GQ_ELtpnqQslSN0WL_PWriugNmMV47fFXqaNTPe6pGW8RcI8Q7tIua7f3a1vL4ynrGYsNvxX0zl8v1HSlsLkrEx6IORQIqTXAhJF_mTYi9_vh0_SmqxHIJVN4UcLQ=w719-h979-no?authuser=0"
             alt=""
           />
+          </div>
         </div>
       </div>
     </div>
